<resources>
    <string name="app_name">CS4322_Homework_1</string>
    <string name="billTotalString">Bill Total</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="tipDefault">0.00</string>
    <string name="customDefault">0%</string>

    </resources>